Parte funcional de la app

--- a/app/src/main/res/layout/fragment_jugador_ingreso.xml
+++ b/app/src/main/res/layout/fragment_jugador_ingreso.xml
@@ -4,10 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ListadoFragment">
+    tools:context=".ui.navViews.JugadorIngresoFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jugadores"
+        android:layout_centerInParent="true"
+       />
+
+
 </RelativeLayout>
