--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -1,27 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="190dp"
     android:layout_margin="5dp"
-    android:layout_height="wrap_content">
+    android:clickable="true"
+    android:focusable="true"
+    android:id="@+id/cartita"
+    android:foreground="?android:selectableItemBackground"
+    app:cardCornerRadius="4dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:padding="8dp"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="106dp"
+            android:layout_height="106dp"
+            android:layout_marginTop="5dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/profile"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"/>
 
         <TextView
             android:id="@+id/tv_campo_1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/tv_campo_2"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:shadowColor="#000"
+            android:shadowDx="3"
+            android:shadowDy="3"
+            android:shadowRadius="3"
+            android:layout_centerHorizontal="true"
+            android:text="Nombre Jugador"
+            android:textAllCaps="true"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
 
 
         <TextView
-            android:layout_marginTop="5dp"
             android:id="@+id/tv_campo_2"
-            android:layout_below="@+id/campo1"
+            android:layout_alignParentBottom="true"
+            android:text="15/25/5020"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp" />
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
