App Terminada en un 75%, toda las funcioanlidad a la base de datos estan implemetnadas. 03/08/2020

--- a/app/src/main/res/layout/fragment_actualizar.xml
+++ b/app/src/main/res/layout/fragment_actualizar.xml
@@ -1,14 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ActualizarFragment">
+    android:orientation="vertical"
+    tools:context=".ui.AgregarJugadorFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_equipo"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/user_icon" />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilNombreJugador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/img_equipo"
+                android:layout_margin="15dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/txtNombreJugador"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:hint="Nombre Jugador"
+                    android:maxLength="50"
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilFechaNac"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilNombreJugador"
+                android:layout_margin="15dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/txtFechaNac"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:hint="Fecha de Nacimiento"
+                    android:maxLength="50"
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Switch
+                android:id="@+id/tilEstado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilFechaNac"
+                android:layout_margin="15dp"
+                android:text="Jugador Activo" />
+
+            <TextView
+                android:id="@+id/tv_entreandor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilEstado"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="5dp"
+                android:shadowColor="#000"
+                android:shadowDx="3"
+                android:shadowDy="3"
+                android:shadowRadius="3"
+                android:text="Nacionalidad"
+                android:textSize="16sp" />
+
+            <Spinner
+                android:id="@+id/tilNacionalidad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_entreandor"
+                android:layout_margin="15dp"
+                android:spinnerMode="dropdown" />
+
+
+            <include
+                layout="@layout/boton_guardar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilNacionalidad"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+</ScrollView>
