--- a/app/src/main/res/layout/fragment_eliminar.xml
+++ b/app/src/main/res/layout/fragment_eliminar.xml
@@ -1,14 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.EliminarFragment">
+    android:orientation="vertical"
+    tools:context=".ui.FichajeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_entreandor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_marginBottom="5dp"
+                android:shadowColor="#000"
+                android:shadowDx="3"
+                android:shadowDy="3"
+                android:shadowRadius="3"
+                android:text="Equipo"
+                android:textSize="16sp" />
+
+            <Spinner
+                android:id="@+id/tilEquipo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_entreandor"
+                android:layout_margin="15dp"
+                android:spinnerMode="dropdown" />
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilNombreJugador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilEquipo"
+                android:layout_margin="15dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/txtNombreJugador"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:hint="Nombre Jugador"
+                    android:maxLength="50"
+                    android:inputType="text"
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilFechaIngreso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilNombreJugador"
+                android:layout_margin="15dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/text_fecha_ingreso"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:hint="Fecha Ingreso"
+                    android:maxLength="50"
+                    android:inputType="number"
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilCamisola"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilFechaIngreso"
+                android:layout_margin="15dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/textCamisla"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
+                    android:hint="No. Camisola"
+                    android:maxLength="50"
+                    android:inputType="number"
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <include
+                layout="@layout/boton_guardar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilCamisola"
+                android:layout_centerHorizontal="true" />
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+</ScrollView>
