--- a/app/src/main/res/layout/fragment_equipo.xml
+++ b/app/src/main/res/layout/fragment_equipo.xml
@@ -4,4 +4,4 @@
     android:id="@+id/recyclerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.navViews.JugadoresFragment" />
+    tools:context=".ui.EquipoFragment" />
