--- a/app/src/main/res/layout/fragment_jugador_detalle.xml
+++ b/app/src/main/res/layout/fragment_jugador_detalle.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.navViews.EntrenadorFragment">
-
+    tools:context=".ui.JugadorDetalleFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,53 +15,83 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_equipo"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/user_icon" />
+
+
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilNombreEntrenado"
+                android:id="@+id/tilNombreJugador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/img_equipo"
                 android:layout_margin="15dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtNombreEntrenado"
+
+                    android:id="@+id/txtNombreJugador"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="22dp"
-                    android:hint="Nombre Equipo"
+                    android:hint="Nombre Jugador"
                     android:maxLength="50"
                     android:textAlignment="center"
                     android:textSize="20dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
-
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilFechNacEntrenado"
+                android:id="@+id/tilFechaNac"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tilNombreEntrenado"
+                android:layout_below="@+id/tilNombreJugador"
                 android:layout_margin="15dp">
 
                 <com.google.android.material.textfield.TextInputEditText
 
-                    android:id="@+id/txtFechaEntrenado"
+                    android:id="@+id/txtFechaNac"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="22dp"
-                    android:hint="Nombre Equipo"
+                    android:hint="Fecha de Nacimiento"
                     android:maxLength="50"
                     android:textAlignment="center"
                     android:textSize="20dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <Switch
+                android:id="@+id/tilEstado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tilFechaNac"
+                android:layout_margin="15dp"
+                android:text="Jugador Activo" />
+
+
+            <Spinner
+                android:id="@+id/tilNacionalidad"
+                android:layout_below="@+id/tilEstado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:spinnerMode="dropdown" />
 
 
             <include
                 layout="@layout/boton_actualizar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tilFechNacEntrenado"
+                android:layout_below="@+id/tilNacionalidad"
                 android:layout_centerHorizontal="true" />
         </RelativeLayout>
+
+
     </LinearLayout>
 
 </ScrollView>
