--- a/app/src/main/res/layout/item_recycler_partido.xml
+++ b/app/src/main/res/layout/item_recycler_partido.xml
@@ -71,7 +71,7 @@
                         android:layout_height="56dp"
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="10dp"
-                        android:src="@drawable/logo"
+                        android:src="@drawable/logo1"
                         app:civ_border_color="#FF000000" />
 
                     <TextView
